# excel-provider

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-dev-image.yml  docker-latest-image.yml  python-app-package.yml  python-app-publish.yml  python-app-test.yml
rest/: requests.http
src/excel_provider/error/: __init__.py  config_missing_field_error.py
src/excel_provider/io/: excel.py
src/excel_provider/models/: __init__.py  data_series.py  data_serieses.py
src/excel_provider/provider/: __init__.py  base_provider.py  excel_provider.py
src/excel_provider/rest/: api.py  handler.py
tests/data/: test.xlsx
tests/error/: test_config_missing_field_error.py
tests/io/: test_excel.py
tests/models/: test_data_series.py  test_data_serieses.py
tests/provider/: test_excel_provider.py
tests/rest/: test_handler.py
