[tool.poetry]
name = "excel-provider"
version = "0.1.0"
description = ""
authors = ["Alexander Essenwanger <cibernop@mable-anex.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2"
pytest = "^8.1.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
