[tool.poetry]
name = "excel-provider"
version = "0.1.5a0"
description = ""
authors = ["Alexander Essenwanger <cibernop@mable-anex.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cybernop/excel-provider"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
openpyxl = "^3.1.2"
flask = "^3.0.2"
pyyaml = "^6.0.1"
flask-swagger = "^0.2.14"

[tool.poetry.group.dev.dependencies]
black = "^24.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
deepdiff = "^6.7.1"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
